syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "rbento.api.v1";
option java_multiple_files = true;

message Note {
	string id = 1;
	string title = 2;
	string text = 3;
	google.protobuf.Timestamp created_on = 4;
	google.protobuf.Timestamp updated_on = 5;
}

message CreateNoteRequest {
	string title = 1;
	string text = 2;
}

message ReadNoteRequest {
	optional string id = 1;
	optional string title = 2;
	optional string text = 3;
	optional google.protobuf.Timestamp created_on = 4;
	optional google.protobuf.Timestamp updated_on = 5;
}

message UpdateNoteRequest {
	string id = 1;
	optional string title = 2;
	optional string text = 3;
}

message DeleteNoteRequest {
	string id = 1;
}

message ListNoteRequest {
	string key = 1;
	optional google.protobuf.Timestamp created_on = 2;
	optional google.protobuf.Timestamp updated_on = 3;
}

service Notepad {
	rpc CreateNote(CreateNoteRequest) returns (Note);
	rpc ReadNote(ReadNoteRequest) returns (Note);
	rpc UpdateNote(UpdateNoteRequest) returns (Note);
	rpc DeleteNote(DeleteNoteRequest) returns (Note);
	rpc ListNotes(ListNoteRequest) returns (stream Note);
}

